fixed login card text alignment

--- a/client/public/css/Login.css
+++ b/client/public/css/Login.css
@@ -5,6 +5,7 @@ a {
 .card {
     width: 500px;
     margin: 150px auto;
+    text-align: center;
 }
 
 .button-green {
